# graphrag-agentic-system

./: .gitignore  README.md  pyproject.toml  run.py
assets/mcp_toolbox_databases/: steps.md
investment_agent/: agents-development.py
investment_agent/.adk/: tools.yaml
mcp/: tools.yaml
src/: app-test.ipynb  app.py
src/adapter/: rest.py
src/adapter/repository/agent/: agent_adk_adapter.py  langgraph_agent_adapter.py
src/adapter/repository/graph_database/: neo4j_adapter.py  neptune_adapter.py
src/adapter/repository/llm_provider/: AWSBedrockLLMProviderAdapter.py  AWSLlmProviderAdapter.py  LiteLLMProviderAdapter.py
src/adapter/repository/mcp_client/: GoogleADKMCPAdapter.py
src/adapter/repository/memory_persistence/: checkpointer_adapter.py
src/config/: app_config.py  database.py  dependencies.py
src/core/: agent_metadata.py  local_tools.py  prompts.py  tools.py
src/core/adk/: agent.py
src/core/langgraph/: nodes.py  states.py
src/core/langgraph/graph_strategies/: ReActGraphStrategy.py
src/core/models/: __init__.py  agent_response.py
src/core/ports/: agent_port.py  graph_database_port.py  graph_strategy_port.py  llm_provider_port.py  mcp_client_port.py
src/utils/: neo4j_serializer.py
