[project]
name = "graphrag-agentic-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.49",
    "fastapi>=0.123.10",
    "google-adk>=1.21.0",
    "ipykernel>=7.2.0",
    "langchain-aws>=1.2.5",
    "litellm>=1.81.13",
    "neo4j>=6.0.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "rich>=14.3.2",
    "uvicorn>=0.40.0",
]
